# agent-stack

./: .dockerignore  .env.emulators.example  .env.example  .gitignore  Dockerfile  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  servicebus-config.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  cd.yml  check.yml  ci.yml  deploy.yml  test.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LOCAL_DEVELOPMENT.md  ROADMAP.md  SPEC.md  SPECIFICATION.md
infra/: main.bicep
infra/modules/: app-configuration.bicep  container-apps-web.bicep  container-apps-worker.bicep  container-apps.bicep  container-registry.bicep  cosmos-db.bicep  log-analytics.bicep  managed-identity.bicep  service-bus.bicep  static-web-apps.bicep  storage-account.bicep
infra/params/: dev.bicepparam  prod.bicepparam
prompts/: draft.md  edit.md  fetch.md  publish.md  review.md
src/agent_stack/: __init__.py  app.py  config.py
templates/: agents.html  base.html  dashboard.html  edition_detail.html  editions.html  links.html  settings.html  status.html  store.html  workspace.html
templates/newsletter/: edition.html  index.html
templates/partials/: agent_activity.html  agent_run_item.html  edition_title.html  link_progress.html
tests/: __init__.py  conftest.py  test_config.py  test_request_diagnostics.py
tests/agents/: test_draft.py  test_edit.py  test_fetch.py  test_llm.py  test_middleware.py  test_models.py  test_prompts.py  test_publish.py  test_registry.py  test_review.py
tests/auth/: test_middleware.py  test_msal_auth.py  (+1 more)
(+130 files in other folders)
