[project]
name = "agent-stack"
version = "0.1.0"
description = "An event-driven, agent-powered editorial pipeline for The Agent Stack newsletter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "azure-cosmos>=4.9.0",
    "agent-framework-core>=1.0.0rc1",
    "msal>=1.31.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "azure-appconfiguration>=1.7.0",
    "sse-starlette>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent-stack = "agent_stack.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stack"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
